fix not showing point in play again section

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ div{
 }
 
 #gamePlay{
-    display: none;
+    display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
@@ -62,13 +62,13 @@ div{
 }
 
 #matchResult{
-    display: none;
+    display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
 
 #afterGame{
-    display: flex;
+    display: none;
     flex-direction: column;
     height: 550px;
     justify-content: center;
